--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- FontAwesome -->
+    <script
+      src="https://kit.fontawesome.com/09d57ad258.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Google Material icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
