--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:site_name" content="인스타그램" />
+    <meta
+      property="og:description"
+      content="평범한 일상부터 인생의 특별한 순간까지"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Instagram</title>
     <!-- FontAwesome -->
     <script
       src="https://kit.fontawesome.com/09d57ad258.js"
